--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,21 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>br.renato.hadoop</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>br.atos.ecommerce.hadoop</groupId>
+	<artifactId>hadoop</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>hadoop-teste-01</name>
 	<description>Demo project for Spring Boot</description>
-<!--  
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.1.RELEASE</version>
-		<relativePath /> ,
-	</parent>
--->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
